--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,21 @@
 /* write your override styles here */
+body div#wall .tag-1 {
+    display: none;
+}
+
+body div#wall .tag-1 + #tag-2 {
+    display: none;
+}
+
+body div#wall #tag-2 + #tag-3 {
+    display: none;
+}
+
+body div#wall #tag-4 {
+    display: none;
+}
+
+body div#wall .parent + .parent #tag-5.slick {
+    display: none;
+}
+
